[package]
name = "actions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
logit = { path = "../logit" }
tokio = { version = "1.23", features = ["fs"] }
futures = "0.3"
anyhow = "1"
